--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,15 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/coolDancer.js"></script>
+    <script src="src/dopeDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>  
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCoolDancer">add a cool dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDopeDancer">add a dope dancer</a> 
       <a href="#" class="lineUp">Line Up</a> 
       <a href="#" class="goBack">Go Back</a>
   </div>
