harry potter dance party

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,15 +8,22 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/coolDancer.js"></script>
     <script src="src/dopeDancer.js"></script>
+    <script src="src/explosion.js"></script>
   </head>
   <body>
+<audio controls>
+  <source src="src/song.mp3" type="audio/mpeg">
+</audio>
+
+
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a> 
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCoolDancer">add a cool dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDopeDancer">add a dope dancer</a> 
+      <span class="title">Harry Potter Dinner</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add he who shall not be named</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCoolDancer">add an Invisibility Cloak Harry Potter</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDopeDancer">add a Sorting Hat</a> 
       <a href="#" class="lineUp">Line Up</a> 
       <a href="#" class="goBack">Go Back</a>
+      <a href="#" class="spell">Expelliarmus</a>
   </div>
     <script src="src/init.js"></script>
   </body>
